// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should rended ExpensesSummery with one expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.50
  </h1>
</div>
`;

exports[`Should rended ExpensesSummery with one expense correctly 2`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $12.00
  </h1>
</div>
`;
